force-app/main/default/objects/Booking__c/fields/BookingStatus__c.field-meta.xml
<CustomField>
    <fullName>BookingStatus__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserved</fullName>
                <default>true</default>
                <label>Reserved</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>